Implemented initInput method in abstract DaySolver